traefik-config/mlflow-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mlflow-ajax-fix
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: "mlflow.ntdoc.site"
    accessControlAllowOriginList:
      - "https://mlflow.ntdoc.site"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "OPTIONS"
      - "PUT"
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
      - "Authorization"
      - "Content-Type"
      - "X-Requested-With"
      - "Accept"
      - "Origin"
      - "MLflow-Version"     
      - "X-MLflow-Run-ID"
    addVaryHeader: true
